<resources>
    <string name="app_name">CardWords</string>
    <string name="test_name">Test</string>
    <string name="learn_name">Learn</string>
    <string name="settings_name">Settings</string>
    <!-- Start Buttons -->
    <string name="button_learn">Learn</string>
    <string name="button_test">Test</string>
    <string name="button_settings">Settings</string>
    <string name="empty_test_dialog_text">No words to test. Learn words in \"Learn\" section to test yourself</string>
    <!--Learn / Test section-->
    <string name="button_yes">Yes</string>
    <string name="button_show">Show</string>
    <string name="button_check">Check</string>
    <string name="button_no">No</string>
    <string name="button_correct">Correct!</string>
    <string name="button_incorrect">Incorrect</string>
    <string name="words_left_learn">Words left to learn: %d</string>
    <string name="words_left_test">Words left to test: %d</string>
    <string name="continue_dialog">Continue learning?</string>
    <string name="ad_title">And card with ad, to support the app</string>
    <string name="button_skip_ad">Skip ad</string>
    <string name="continue_dialog_text">Great job! Continue learning?</string>
    <string name="continue_dialog_positive">Yes!</string>
    <string name="continue_dialog_negative">No</string>
    <!--Settings section-->
    <string name="menu_settings">Settings</string>
    <string name="settings_reset">Reset</string>
    <string name="settings_reset_summary">Reset your progress </string>
    <string name="settings_number_of_words">Number of words</string>
    <string name="settings_number_of_words_summary">Set the number of words in "Learn" list</string>
    <string name="version_app">Version</string>
    <string name="version_app_summary">0.9b</string>
    <string name="settings_category_other">Other</string>
    <string name="settings_darkmode">Dark mode</string>
    <string name="settings_darkmode_summary">Enable dark mode</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_swipemode_summary">Enable to use swipes instead of buttons </string>
    <string name="settings_tries">Number of tries</string>
    <string name="settings_tries_summary">Set the number of tries</string>
    <!--Misc-->
    <string name="content_descr_back">Back</string>
    <string name="dialog_dismiss">Dismiss</string>

</resources>
