<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Learn">

        <Preference
            android:key="key_words_number"
            android:title="@string/settings_number_of_words"
            android:summary="@string/settings_number_of_words_summary"/>

        <Preference
            android:key="key_tries_number"
            android:title="@string/settings_tries"
            android:summary="@string/settings_tries_summary"/>

        <Preference
            android:key="key_reset"
            android:title="@string/settings_reset"
            android:summary="@string/settings_reset_summary" />

    </PreferenceCategory>

    <!--<PreferenceCategory
        android:title="@string/settings_category_appearance">

        <SwitchPreference
            android:key="key_dark_mode"
            android:title="@string/settings_darkmode"
            android:summary="@string/settings_darkmode_summary"/>

        <SwitchPreference
            android:key="key_swipemode"
            android:title="@string/settings_swipemode"
            android:summary="@string/settings_swipemode_summary"/>

    </PreferenceCategory>-->

    <PreferenceCategory
        android:title="@string/settings_category_other" >

        <Preference
            android:title="@string/app_version"
            android:summary="1.0"/>

    </PreferenceCategory>

</PreferenceScreen>