<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">
    <fragment
        android:id="@+id/startFragment"
        android:name="com.ricode.cardwords.ui.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_testFragment"
            app:destination="@id/testFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_startFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_startFragment_to_learnFragment"
            app:destination="@id/learnFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/testFragment"
        android:name="com.ricode.cardwords.ui.TestFragment"
        android:label="@string/test_name"
        tools:layout="@layout/fragment_cardwords"/>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.ricode.cardwords.ui.SettingsFragment"
        android:label="@string/settings_name"
        tools:layout="@layout/fragment_settings"
         />
    <fragment
        android:id="@+id/learnFragment"
        android:name="com.ricode.cardwords.ui.LearnFragment"
        android:label="LearnFragment"
        tools:layout="@layout/fragment_cardwords"/>
    <fragment
        android:id="@+id/rebuildingFragment"
        android:name="com.ricode.cardwords.ui.RebuildingFragment"
        android:label="fragment_rebuilding"
        tools:layout="@layout/fragment_rebuilding" >
        <action
            android:id="@+id/action_rebuildingFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>